# Equirecursive

./: .ghci  LICENSE  README.md  Test.hs  reflexive.cabal  stack.yaml  test2.hs
src/: Test.hs
src/Control/Lens/: Utils.hs
src/Data/: Equirecursive.hs  Exists.hs  Lifted.hs  Rec.hs  Recurse.hs  Reflexive.hs  Reflexive2.hs  Reflexive_old.hs  TyResult.hs  TypeK.hs  X.hs
src/Data/Default/: Orphans.hs
src/Data/Equirecursive/: Class.hs  Exists.hs  Function.hs  Graph.hs  List.hs  Test.hs  Tree.hs
src/Data/Rec/: Recurse.hs
src/Data/Recurse/: Equality.hs  Recursing.hs  TH.hs
src/Data/Recurse/TH/: Test.hs
src/Data/Type/: Test.hs
src/Data/Type/Family/: Drop.hs
src/Data/Type/Test/: Assert.hs  Internal.hs  ShrinkType.hs  Star.hs  TH.hs
src/Data/Type/Test/Star/: Utils.hs
src/Data/X/: Drop.hs  Folding.hs  Map.hs  Pair.hs
src/Data/X/Map/: Builders.hs  Internal.hs  TH.hs
src/Language/Haskell/TH/: Utils.hs
src/Test/QuickCheck/: GenS.hs  Types.hs
src/Test/QuickCheck/Q/: Arbitrary.hs  Property.hs  Test.hs
src/Test/QuickCheck/Types/: TH.hs  Test.hs
test/Data/: Recurse.hs  X.hs
test/Data/Equirecursive/: Class.hs  List.hs
test/Data/Equirecursive/Type/: Equality.hs
test/Data/Type/Test/: Internal.hs  TH.hs
test/Data/X/: Drop.hs  YT.hs
test/Data/X/Map/: TH.hs
test/src/Data/: Locking.hs  Result.hs  X.hs
test/src/Data/Default/: Orphans.hs
test/src/Data/Equirecursive/: Arrow.hs  Function.hs  Tree.hs  Type.hs
test/src/Data/Equirecursive/Class/: TH.hs
test/src/Data/Recurse/: Equality.hs
test/src/Data/Recurse/TH/: Test.hs
test/src/Data/Type/: Test.hs
test/src/Data/Type/Test/: Assert.hs
test/src/Data/X/: Pair.hs
test/src/Test/QuickCheck/: GenS.hs
