name:                reflexive
version:             0.1.0.0
synopsis:            Limited infinite types
description:         Please see README.md
homepage:            https://github.com/michaeljklein/basic#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Klein
maintainer:          lambdamichael@gmail.com
copyright:           2016 Michael Klein
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.X
                     , Data.X.Map
                     , Data.X.Folding
                     , Data.Locking
                     , Data.Recurse
                     , Data.Recurse.Equality
                     , Data.Recurse.Recursing
                     , Data.Exists
                     , Data.Equirecursive
                     , Data.Equirecursive.Arrow
                     , Data.Equirecursive.Type
                     , Data.Equirecursive.Type.Equality
                     , Data.Equirecursive.List
                     , Data.Equirecursive.Tree
                     , Data.Equirecursive.Graph
                     , Data.Equirecursive.Exists
                     , Data.Equirecursive.Function
                     , Data.Equirecursive.Test
                     , Data.Lifted
                     , Control.Lens.Utils
  ghc-options:         -Wall -fprint-unicode-syntax
  build-depends:       base >= 4.9.0.0
                     , comonad >= 4.3
                     , contravariant >= 1.4
                     , data-default >= 0.7.1.1
                     , lens >= 4.14
                     , transformers >= 0.5.2.0
                     , distributive >= 0.5.0.2
                     , template-haskell >= 2.11.0.0
                     , profunctors >= 5.2
                     , containers >= 0.5.7.1
                     , ghc-prim
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , InstanceSigs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NoMonomorphismRestriction
                     , PolyKinds
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeFamilyDependencies
                     , TypeOperators
                     , UndecidableInstances
                     , UndecidableSuperClasses



executable basic-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , InstanceSigs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NoMonomorphismRestriction
                     , PolyKinds
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeFamilyDependencies
                     , TypeOperators
                     , UndecidableInstances
                     , UndecidableSuperClasses


test-suite basic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , InstanceSigs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NoMonomorphismRestriction
                     , PolyKinds
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeFamilyDependencies
                     , TypeOperators
                     , UndecidableInstances
                     , UndecidableSuperClasses


source-repository head
  type:     git
  location: https://github.com/michaeljklein/basic
