name:                reflexive
version:             0.1.0.0
synopsis:            Limited infinite types
description:         Please see README.md
homepage:            https://github.com/michaeljklein/basic#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Klein
maintainer:          lambdamichael@gmail.com
copyright:           2016 Michael Klein
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.X
                     , Control.Lens.Utils
                     , Data.Default.Orphans
                     , Data.Equirecursive
                     , Data.Equirecursive.Arrow
                     , Data.Equirecursive.Class
                     , Data.Equirecursive.Exists
                     , Data.Equirecursive.Function
                     , Data.Equirecursive.Graph
                     , Data.Equirecursive.List
                     , Data.Equirecursive.Test
                     , Data.Equirecursive.Tree
                     , Data.Equirecursive.Type
                     , Data.Equirecursive.Type.Equality
                     , Data.Exists
                     , Data.Locking
                     , Data.Recurse
                     , Data.Recurse.Equality
                     , Data.Recurse.Recursing
                     , Data.Type.Test
                     , Data.Type.Test.Assert
                     , Data.Type.Test.Internal
                     , Data.Type.Test.ShrinkType
                     , Data.Type.Test.Star
                     , Data.Type.Test.Star.Utils
                     , Test.QuickCheck.GenS
                     , Data.Type.Test.TH
                     , Data.X.Drop
                     , Data.X.Folding
                     , Data.X.Map
                     , Data.X.Pair
  ghc-options:         -fprint-unicode-syntax
  build-depends:       base >= 4.9.0.0
                     , comonad >= 4.3
                     , contravariant >= 1.4
                     , data-default >= 0.7.1.1
                     , lens >= 4.14
                     , transformers >= 0.5.2.0
                     , distributive >= 0.5.0.2
                     , template-haskell >= 2.11.0.0
                     , profunctors >= 5.2
                     , containers >= 0.5.7.1
                     , ghc-prim
                     , QuickCheck >= 2.8.2
                     , deepseq >= 1.4.2.0
                     , hashable >= 1.2.4.0
                     , random >= 1.1
                     , bifunctors >= 5.4.1
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , InstanceSigs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NoMonomorphismRestriction
                     , PolyKinds
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeFamilyDependencies
                     , TypeOperators
                     , UndecidableInstances
                     , UndecidableSuperClasses



executable basic-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , InstanceSigs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NoMonomorphismRestriction
                     , PolyKinds
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeFamilyDependencies
                     , TypeOperators
                     , UndecidableInstances
                     , UndecidableSuperClasses


test-suite basic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , InstanceSigs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NoMonomorphismRestriction
                     , PolyKinds
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeFamilyDependencies
                     , TypeOperators
                     , UndecidableInstances
                     , UndecidableSuperClasses


source-repository head
  type:     git
  location: https://github.com/michaeljklein/basic
